# SlackBBot-Plugin-Examples

./: .gitignore  BanLists.cpp  CMakeLists.txt  HoroscopeToday.cpp  HoroscopeToday.h  HoroscopeTodayEx.cpp  LICENSE  ReadMe.md
include/SlackBot/: LICENSE  Plugin_Base.cpp  Plugin_Base.h  Plugin_Data.h  Plugin_FunctionDefinition.h  Plugin_FunctionTypeDefinition.h
include/SlackBot/Message/: MessageDefinition.h
